[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qlab-wyze-bridge"
version = "1.0.0"
description = "Bridge QLab OSC commands to Wyze color LED bulbs via the Wyze SDK."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "wyze-sdk>=2.1.0",
    "python-osc>=1.8.3",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
qlab-wyze-bridge = "qlab_wyze_bridge.__main__:main"

[tool.setuptools]
packages = ["qlab_wyze_bridge"]
